weird spacing fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,7 +37,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
-  align-content: stretch;
+  align-content: center;
 }
 
 h3 {
@@ -56,6 +56,11 @@ body {
   background-color: gray;
 }
 
- * {
+.
+
+
+
+
+  {
   border: black solid 1px;
 }
